<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_department"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_department" />
        <item
            android:id="@+id/nav_student"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_student" />
        <item
            android:id="@+id/nav_instructor"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_instructor" />
        <item
            android:id="@+id/nav_course"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_course" />


        <!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>