<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.srfl.gibi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.srfl.gibi.ui.student.StudentFragment"
        android:label="@string/menu_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_department"
        android:name="com.srfl.gibi.ui.department.DepartmentFragment"
        android:label="@string/menu_department"
        tools:layout="@layout/fragment_department" />
    <fragment
        android:id="@+id/nav_instructor"
        android:name="com.srfl.gibi.ui.instructor.InstructorFragment"
        android:label="@string/menu_instructor"
        tools:layout="@layout/fragment_instructor" />
    <fragment
        android:id="@+id/nav_course"
        android:name="com.srfl.gibi.ui.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course" />
    <fragment
        android:id="@+id/studentCreateEdit"
        android:name="com.srfl.gibi.studentCreateEdit"
        android:label="fragment_student_create_edit"
        tools:layout="@layout/fragment_student_create_edit" />
</navigation>